@@ -1,4 +1,5 @@
 0.02
+ - Add EXAMPLE3 section to doc.
  - Add Map::Tube::GraphViz, Map::Tube::Text::Table, Task::Map::Tube,
    Map::Tube::Budapest, Map::Tube::Dnipropetrovsk, Map::Tube::Nanjing,
    Map::Tube::Novosibirsk, Map::Tube::SaintPetersburg, Map::Tube::Vienna
